# jobrready

./: .env.example  .gitignore  ADZUNA_API_INTEGRATION_SUMMARY.md  API_KEYS_FIX_SUMMARY.md  API_KEYS_SETUP.md  APPLICATION_FIX_SUMMARY.md  APPLICATION_STATUS.md  CODEBASE_FIXES_SUMMARY.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  FINAL_API_KEYS_FIX_SUMMARY.md  FINAL_JOB_SECTION_FIX_SUMMARY.md  FINAL_SECURITY_RELIABILITY_AUDIT_REPORT.md  FRONTEND_TESTSPRITE_SUMMARY.md  MICROSERVICES_HEALTH_FIX_SUMMARY.md  PREMIUM_FEATURES_SUMMARY.md  README.md  RELIABILITY_ENGINEERING_GUIDE.md  SECURITY_AND_RELIABILITY_AUDIT.md  SECURITY_GUIDELINES.md  SECURITY_RELIABILITY_IMPROVEMENTS_SUMMARY.md  TESTSPRITE_PROJECT_FIXES_SUMMARY.md  TESTSPRITE_TESTING_RESULTS.md  TESTSPRITE_TESTING_SUMMARY.md  backend_testsprite_report.txt  comprehensive_project_testsprite_report.txt  comprehensive_testsprite_report.txt  comprehensive_testsprite_test.py  docker-compose.prod.yml  docker-compose.yml  frontend_testsprite_config.json  frontend_testsprite_report.txt  mcp-config.json  package.json  run_testsprite_demo.py  run_testsprite_test.py  test_all_premium_features.py  test_all_services.py  test_backend_with_testsprite.py  test_env_vars.py  (+7 more)
backend/: Dockerfile  pyproject.toml  requirements.txt  run_tests.py
backend/app/: application_filler.py  cache.py  config.py  course_recommender.py  di_container.py  diversity_insights.py  document_summarizer.py  error_handlers.py  interview_coach.py  job_matcher.py  job_recommender.py  job_search.py  logging_config.py  main.py  mock_interviewer.py  (+8 more)
(+186 files in other folders)
