[project]
name = "mybrand-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "pydantic==2.7.3",
  "pydantic-settings==2.3.1",
  "supabase==2.5.1",
  "stripe==9.12.0",
  "openai==1.35.10",
  "redis==5.0.6",
]

[tool.uvicorn]
factory = false


