[project]
name = "mybrand-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.3.1",
  "supabase>=2.5.1",
  "stripe>=9.12.0",
  "openai>=1.35.10",
  "redis>=5.0.6",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "--cov=app",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--verbose"
]

[tool.coverage.run]
source = ["app"]
omit = [
  "*/venv/*",
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.uvicorn]
factory = false